--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         I am sure I will be able to contribute something capable for the growth of the company. 
                         I am very hard-working and I am a quick learner, hence can easily mould myself in the desired shape.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://linkedin.com/in/sandeep-ghildiyal-884673170"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/sandeep-ghildiyal-884673170/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/sandeep3642"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/SandeepGhildi16"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/sandeep.ghildiyal.56/"><i class="fab fa-facebook-f"></i></a>
