--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certification">Certification</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certification">Certification</a></li>
                 </ul>
             </div>
         </nav>
